fixed home1 overflow

--- a/src/style.css
+++ b/src/style.css
@@ -259,11 +259,12 @@ button:focus {
 .home-section {
   position: relative;
   z-index: -1;
-  /* background-image: var(--image-gradient), url(./Assets/home-bg.jpg); */
-  background-position: top center;
-  background-repeat: no-repeat;
   padding-bottom: 30px !important;
   padding-top: 30px !important;
+  height: 100vh;
+  overflow: hidden;
+  justify-content: center;
+  align-items: center;
 }
 
 .home-content {
@@ -333,12 +334,6 @@ button:focus {
   opacity: 0;
   pointer-events: none;
   transition: opacity 0.5s ease-in-out;
-}
-
-@media (max-width: 767px) {
-  .scroll-to-bottom-container{
-    display: none;
-  }
 }
 
 .Typewriter__wrapper {
